src/objects/Lms_room_type_desc_sda__x.object
<CustomObject>
    <description>lms_room_type_desc_sda</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$lms_room_type_desc_sda</externalName>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <description>c_prop_cd</description>
        <externalDeveloperName>c_prop_cd</externalDeveloperName>
        <label>c_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>c_prop_cd_fk</description>
        <externalDeveloperName>c_prop_cd_fk</externalDeveloperName>
        <label>Property code</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lms room type desc sda</relationshipLabel>
        <relationshipName>Lms_room_type_desc_sda</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_rm_type__c</fullName>
        <description>c_rm_type</description>
        <externalDeveloperName>c_rm_type</externalDeveloperName>
        <label>c_rm_type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_room_accessible__c</fullName>
        <description>c_room_accessible</description>
        <externalDeveloperName>c_room_accessible</externalDeveloperName>
        <label>c_room_accessible</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_room_bed_type__c</fullName>
        <description>c_room_bed_type</description>
        <externalDeveloperName>c_room_bed_type</externalDeveloperName>
        <label>c_room_bed_type</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_room_desc1__c</fullName>
        <description>c_room_desc1</description>
        <externalDeveloperName>c_room_desc1</externalDeveloperName>
        <label>c_room_desc1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_room_desc2__c</fullName>
        <description>c_room_desc2</description>
        <externalDeveloperName>c_room_desc2</externalDeveloperName>
        <label>c_room_desc2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_room_desc3__c</fullName>
        <description>c_room_desc3</description>
        <externalDeveloperName>c_room_desc3</externalDeveloperName>
        <label>c_room_desc3</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_room_quality__c</fullName>
        <description>c_room_quality</description>
        <externalDeveloperName>c_room_quality</externalDeveloperName>
        <label>c_room_quality</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_room_smoking__c</fullName>
        <description>c_room_smoking</description>
        <externalDeveloperName>c_room_smoking</externalDeveloperName>
        <label>c_room_smoking</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_user_flag1__c</fullName>
        <description>c_user_flag1</description>
        <externalDeveloperName>c_user_flag1</externalDeveloperName>
        <label>c_user_flag1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_user_flag2__c</fullName>
        <description>c_user_flag2</description>
        <externalDeveloperName>c_user_flag2</externalDeveloperName>
        <label>c_user_flag2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_user_flag3__c</fullName>
        <description>c_user_flag3</description>
        <externalDeveloperName>c_user_flag3</externalDeveloperName>
        <label>c_user_flag3</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_last_update_date__c</fullName>
        <description>d_last_update_date</description>
        <externalDeveloperName>d_last_update_date</externalDeveloperName>
        <label>d_last_update_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>f_user_amt1__c</fullName>
        <description>f_user_amt1</description>
        <externalDeveloperName>f_user_amt1</externalDeveloperName>
        <label>f_user_amt1</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_user_amt2__c</fullName>
        <description>f_user_amt2</description>
        <externalDeveloperName>f_user_amt2</externalDeveloperName>
        <label>f_user_amt2</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_user_amt3__c</fullName>
        <description>f_user_amt3</description>
        <externalDeveloperName>f_user_amt3</externalDeveloperName>
        <label>f_user_amt3</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rm_sort_1__c</fullName>
        <description>i_rm_sort_1</description>
        <externalDeveloperName>i_rm_sort_1</externalDeveloperName>
        <label>i_rm_sort_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rm_sort_2__c</fullName>
        <description>i_rm_sort_2</description>
        <externalDeveloperName>i_rm_sort_2</externalDeveloperName>
        <label>i_rm_sort_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rm_sort_3__c</fullName>
        <description>i_rm_sort_3</description>
        <externalDeveloperName>i_rm_sort_3</externalDeveloperName>
        <label>i_rm_sort_3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_room_bet_type_sort__c</fullName>
        <description>i_room_bet_type_sort</description>
        <externalDeveloperName>i_room_bet_type_sort</externalDeveloperName>
        <label>i_room_bet_type_sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_room_quality_sort__c</fullName>
        <description>i_room_quality_sort</description>
        <externalDeveloperName>i_room_quality_sort</externalDeveloperName>
        <label>i_room_quality_sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_user_score1__c</fullName>
        <description>i_user_score1</description>
        <externalDeveloperName>i_user_score1</externalDeveloperName>
        <label>i_user_score1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_user_score2__c</fullName>
        <description>i_user_score2</description>
        <externalDeveloperName>i_user_score2</externalDeveloperName>
        <label>i_user_score2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_user_score3__c</fullName>
        <description>i_user_score3</description>
        <externalDeveloperName>i_user_score3</externalDeveloperName>
        <label>i_user_score3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lms room type desc sda</label>
    <pluralLabel>Lms room type desc sda</pluralLabel>
</CustomObject>